# OllamaBenchPackager

./: .gitignore  README.md  README.zh.md  package.sh
ollama_dist/: QUICKSTART.md  QUICKSTART.zh.md  README.md  README.zh.md  install.sh  ollama-linux-arm64.tgz  ollama.service.template  run_benchmark.sh  run_benchmark.zh.md
ollama_dist/va-chatbot/: pyproject.toml  test_vehicle_assistant.py  va_assistant.py  vehicle_assistant_v2.py  vehicle_tools.py  车载助手_实用提示词模板.md  车载助手_改进计划.md
ollama_dist/vehicle-assistant/: Ollama后台服务配置指南.md  prompt_tester.py  使用说明.md  抗干扰测试脚本.py  车载语音助手.Modelfile  车载语音助手_抗干扰测试用例.md
