[project]
name = "va-chatbot"
version = "0.1.0"
description = "A vehicle assistant chatbot powered by Ollama."
dependencies = [
    "langchain-core",
    "langchain-ollama",
    "loguru",
    "prompt-toolkit",
]

[project.scripts]
va-chatbot = "vehicle_assistant_v2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "*.py"
] 

[[tool.uv.index]]
# Required URL for the index.
url = "https://pypi.tuna.tsinghua.edu.cn/simple"